--- a/templates/addtest_ping.html
+++ b/templates/addtest_ping.html
@@ -7,7 +7,7 @@
 <h2>Add Ping Test</h2>
 This test does 500 pings from the Device to the destination IP.<br />
 The LAN IP of the device will be used as the Ping Source address.<br />
-A pass is 100/100 success, any other ping result will be a Fail status.<br />
+A pass is 500/500 success, any other ping result will be a Fail status.<br /><br />
 <form id="pingTestForm" method="POST">
     {{ form.hidden_tag() }}
 
